--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
     method="post">
   <label for="k">Enter the number of most expensive products:</label>
   <input type="text" name="k" id="k" required>
-  <button type="submit" class="btn btn-primary">Get Top K Most Expensive Products</button>
+  <button type="submit" class="btn btn-primary">Go</button>
 </form>
 
 <br><br>
