--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -4,7 +4,7 @@
 
 <br><br>
 
-<h2>Top {{ top_k_products.rowcount }} Most Expensive Products</h2>
+<h2>Top K Most Expensive Products</h2>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
