--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,15 @@
 {% block content %}
 
 <br><br>
+<!-- Seller Inventory Search Form -->
+<form action="{{ url_for('users.redirect_to_seller_inventory') }}" method="post">
+  <label for="user_id">Search Seller's Inventory by Seller's UID:</label>
+  <input type="text" name="user_id" id="user_id" required>
+  <button type="submit" class="btn btn-primary">Search</button>
+</form>
+<br><br>
+
+<br><br>
 
 <h2>Products for sale:</h2>
 <table class='table table-hover table-bordered container'>
