--- a/app/templates/product_rating.html
+++ b/app/templates/product_rating.html
@@ -4,23 +4,35 @@
 
 <br><br>
 
-<h2>Products Reviews:</h2>
+<body>
+  <a href="{{ url_for('index.index') }}" type="button" class="btn btn-light">Home</a>
+</body>
+
+<h2>Reviews:</h2>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Product ID</th>
+      <th scope="col">Product</th>
+      <th scope="col">Stars</th>
       <th scope="col">Description</th>
+      <th scope="col">Upvotes</th>
+      <th scope="col">Downvotes</th>
       <th scope="col">Time Reviewed</th>
     </tr>
   </thead>
+
   <tbody>
-    {% for product in products%}
+    {% for rating in ratings%}
       <tr>
-        <th scope="row">{{product.pid}}</th>
-        <td>{{product.description}}</td>
-        <td>{{product.time_reviewed}}</td>
+        <th scope="row">{{rating.product_name}}</th>
+        <td>{{rating.stars}}</td>
+        <td>{{rating.description}}</td>
+        <td>{{rating.upvotes}}</td>
+        <td>{{rating.downvotes}}</td>
+        <td>{{rating.time_reviewed}}</td>
       </tr>
     {% endfor %}
   </tbody>
 </table>
+
 {% endblock %}
