--- a/app/templates/user_purchases.html
+++ b/app/templates/user_purchases.html
@@ -5,7 +5,7 @@
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Product ID</th>
+      <th scope="col">Purchase ID</th>
       <th scope="col">Product Name</th>
       <th scope="col">Time Purchased</th>
     </tr>
