--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,38 @@
 
 <br><br>
 
+<form action="{{ url_for('product_rating.redirect_to_user_reviews') }}" method="post">
+  <label for="user_id">Search User's Reviews by User ID:</label>
+  <input type="text" name="user_id" id="user_id" required>
+  <button type="submit" class="btn btn-primary">Search</button>
+</form>
+
+<br><br>
+<form action="{{ url_for('users.redirect_to_seller_inventory') }}" method="post">
+  <label for="user_id">Search Seller's Inventory by Seller's UID:</label>
+  <input type="text" name="user_id" id="user_id" required>
+  <button type="submit" class="btn btn-primary">Search</button>
+</form>
+<br><br>
+
+<form action="{{ url_for('carts.redirect_to_user_cart', uid=uid) }}" method="post">
+  <label for="user_id">Search User's Cart by User ID:</label>
+  <input type="text" name="user_id" id="user_id" required>
+  <button type="submit" class="btn btn-primary">Search</button>
+</form>
+
+<br><br>
+
+
+<form action="{{ url_for('products.get_top_k_products')}}"
+    method="post">
+  <label for="k">Enter the number of most expensive products:</label>
+  <input type="text" name="k" id="k" required>
+  <button type="submit" class="btn btn-primary">Search</button>
+</form>
+
+<br><br>
+
 <h2>Products for sale:</h2>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
