got rid of openai, added category filter, able to generate proudcts database

--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -5,6 +5,19 @@
 <br><br>
 
 <h2>Top K Most Expensive Products</h2>
+
+<div class="form-group">
+  <label for="categorySelect">Select a Category:</label>
+  <select class="form-control" id="categorySelect">
+    <option value="all">--</option>
+    <option value="electronics">Electronics</option>
+    <option value="fashion">Fashion and Apparel</option>
+    <option value="home">Home and Garden</option>
+    <option value="media">Books and Media</option>
+    <option value="health">Health and Beauty</option>
+  </select>
+</div>
+
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
