added description attribute to products

--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -28,6 +28,8 @@
       <th scope="col">Product ID</th>
       <th scope="col">Product Name</th>
       <th scope="col">Price</th>
+      <th scope="col">Description</th>
+      <th scope="col">Category</th>
     </tr>
   </thead>
   <tbody>
@@ -36,6 +38,8 @@
         <th scope="row">{{product.id}}</th>
         <td>{{product.name}}</td>
         <td>{{product.price}}</td>
+        <td>{{product.description}}</td>
+        <td>{{product.category}}</td>
       </tr>
     {% endfor %}
   </tbody>
