--- a/app/templates/products_categories.html
+++ b/app/templates/products_categories.html
@@ -32,6 +32,8 @@
         <th scope="row">{{product.id}}</th>
         <td>{{product.name}}</td>
         <td>{{product.price}}</td>
+        <td>{{product.description}}</td>
+        <td>{{product.category}}</td>
       </tr>
     {% endfor %}
   </tbody>
