--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -11,15 +11,18 @@
 <h2>Top K Most Expensive Products</h2>
 
 <div class="form-group">
-  <label for="categorySelect">Select a Category:</label>
-  <select class="form-control" id="categorySelect">
-    <option value="all">--</option>
-    <option value="electronics">Electronics</option>
-    <option value="fashion">Fashion and Apparel</option>
-    <option value="home">Home and Garden</option>
-    <option value="media">Books and Media</option>
-    <option value="health">Health and Beauty</option>
-  </select>
+  <form action="{{ url_for('products.get_top_k_products') }}" method="POST" id="filterForm">
+    <label for="categorySelect">Select a Category:</label>
+    <select class="form-control" name="category" id="categorySelect">
+      <option value="all">--</option>
+      <option value="electronics">Electronics</option>
+      <option value="fashion">Fashion and Apparel</option>
+      <option value="home">Home and Garden</option>
+      <option value="media">Books and Media</option>
+      <option value="health">Health and Beauty</option>
+    </select>
+    <button type="submit" class="btn btn-primary">Filter</button>
+  </form>
 </div>
 
 <table class='table table-hover table-bordered container'>
