--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,7 +35,7 @@
 <br><br>
 
 
-<form action="{{ url_for('products.get_top_k_products')}}"
+<form action="{{ url_for('products.get_products')}}"
     method="post">
   <label for="k">Enter the number of most expensive products:</label>
   <input type="text" name="k" id="k" required>
