--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -8,18 +8,18 @@
 </body>
 <br><br>
 
-<h2>Top K Most Expensive Products</h2>
+<h2>Available Products</h2>
 
 <div class="form-group">
-  <form action="{{ url_for('products.get_top_k_products') }}" method="POST" id="filterForm">
+  <form action="{{ url_for('products.category_filter') }}" method="GET" id="filterForm">
     <label for="categorySelect">Select a Category:</label>
     <select class="form-control" name="category" id="categorySelect">
       <option value="all">--</option>
-      <option value="electronics">Electronics</option>
-      <option value="fashion">Fashion and Apparel</option>
-      <option value="home">Home and Garden</option>
-      <option value="media">Books and Media</option>
-      <option value="health">Health and Beauty</option>
+      <option value="Electronics">Electronics</option>
+      <option value="Fashion and Apparel">Fashion and Apparel</option>
+      <option value="Home and Garden">Home and Garden</option>
+      <option value="Books and Media">Books and Media</option>
+      <option value="Health and Beauty">Health and Beauty</option>
     </select>
     <button type="submit" class="btn btn-primary">Filter</button>
   </form>
@@ -36,7 +36,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for product in top_k_products%}
+    {% for product in products%}
       <tr>
         <th scope="row">{{product.id}}</th>
         <td>{{product.name}}</td>
