--- a/app/templates/seller_rating.html
+++ b/app/templates/seller_rating.html
@@ -8,11 +8,11 @@
   <a href="{{ url_for('index.index') }}" type="button" class="btn btn-light">Home</a>
 </body>
 
-<h2>Product Reviews:</h2>
+<h2>Seller Reviews:</h2>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Product</th>
+      <th scope="col">Seller Name</th>
       <th scope="col">Stars</th>
       <th scope="col">Description</th>
       <th scope="col">Upvotes</th>
@@ -20,17 +20,17 @@
       <th scope="col">Time Reviewed</th>
     </tr>
   </thead>
-
+  
   <tbody>
-    {% for rating in ratings%}
+    {% for rating in s_ratings%}
       <tr>
-        <th scope="row">{{rating.product_name}}</th>
+        <th scope="row">{{rating.seller_firstname}} {{rating.seller_lastname}}</th>
         <td>{{rating.stars}}</td>
         <td>{{rating.description}}</td>
         <td>{{rating.upvotes}}</td>
         <td>{{rating.downvotes}}</td>
         <td>{{rating.time_reviewed}}</td>
-        <td><a href="{{ url_for('product_rating.redirect_to_edit_review', pid=rating.pid) }}"  type="button" class="btn btn-light">Edit Review</a></td>
+        <td><a href="{{ url_for('seller_rating.redirect_to_edit_review_sellers', sid=rating.sid) }}"  type="button" class="btn btn-light">Edit Review</a></td>
       </tr>
     {% endfor %}
   </tbody>
