--- a/app/templates/seller_rating.html
+++ b/app/templates/seller_rating.html
@@ -35,7 +35,16 @@
     {% endfor %}
   </tbody>
 </table>
-
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    {% set total_pages = (total // per_page) + (1 if total % per_page > 0 else 0) %}
+    {% for p in range(1, total_pages + 1) %}
+    <li class="page-item {% if p == page %}active{% endif %}">
+      <a class="page-link" href="{{ url_for('seller_rating.seller_rating', uid=uid, page=p) }}">{{ p }}</a>
+    </li>
+    {% endfor %}
+  </ul>
+</nav>
 
 
 {% endblock %}
