--- a/app/templates/carts.html
+++ b/app/templates/carts.html
@@ -9,24 +9,45 @@
 </body>
 
 <h2>Cart Items:</h2>
-<table class='table table-hover table-bordered container'>
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Line Item ID</th>
-      <th scope="col">Product Name</th>
-      <th scope="col">Quantity</th>
-    </tr>
-  </thead>
 
-  <tbody>
-    {% for item in cart_items%}
+<form action="{{ url_for('carts.update_all_quantities') }}" method="post">
+  <table class='table table-hover table-bordered container'>
+    <thead class="thead-dark">
       <tr>
-        <th scope="row">{{item.liid}}</th>
-        <td>{{item.product_name}}</td>
-        <td>{{item.qty}}</td>
+        <th scope="col">Line Item ID</th>
+        <th scope="col">Product Name</th>
+        <th scope="col">Quantity</th>
+        <th scope="col">Remove</th>
       </tr>
-    {% endfor %}
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      {% for item in cart_items %}
+        <tr>
+          <th scope="row">{{ item.liid }}</th>
+          <td>{{ item.product_name }}</td>
+          <td>
+            <input type="number" name="quantity_{{ item.liid }}" value="{{ item.qty }}" min="1" class="form-control">
+          </td>
+          <td>
+            <form action="{{ url_for('carts.remove_item', liid=item.liid) }}" method="post">
+              <input type="hidden" name="user_id" value="{{ uid }}">
+              <button type="submit" class="btn remove-btn">
+                <span class="remove-icon">&times;</span>
+              </button>
+            </form>
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
   
+  <input type="hidden" name="user_id" value="{{ uid }}">
+
+  
+  <div class="text-right">
+    <button type="submit" class="btn btn-info btn-lg">Update Quantities</button>
+  </div>
+</form>
+
 {% endblock %}
