--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,13 +34,12 @@
 
 <br><br>
 
-
-<form action="{{ url_for('products.get_products')}}"
-    method="post">
-  <label for="k">Enter the number of most expensive products:</label>
-  <input type="text" name="k" id="k" required>
+<form action="{{ url_for('products.get_products') }}" method="post">
+  <label for="user_id">Search for Products:</label>
+  <input type="text" name="keywords" id="keywords" required>
   <button type="submit" class="btn btn-primary">Search</button>
 </form>
+
 
 <br><br>
 
