fully updated and working

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,6 +55,7 @@
           Hello {{current_user.firstname}}!
           <a href="{{ url_for('users.profile') }}" type="button" class="btn btn-light">Profile</a>
           <a href="{{ url_for('users.redirect_to_seller_inventory') }}" type="button" class="btn btn-light">Seller Page</a>
+          <a href="{{ url_for('carts.redirect_to_user_cart') }}" type="button" class="btn btn-light">Cart</a>
           <a href="{{ url_for('users.my_purchases') }}" type="button" class="btn btn-light">Orders</a>
           <a href="{{ url_for('users.logout') }}" type="button" class="btn btn-light">Log out</a>
         {% else %}
