--- a/app/templates/carts.html
+++ b/app/templates/carts.html
@@ -7,14 +7,13 @@
 <body>
   <a href="{{ url_for('index.index', uid=uid) }}" type="button" class="btn btn-light">Home</a>
 </body>
-
+<br><br>
 <h2>Cart Items:</h2>
 
-<form action="{{ url_for('carts.update_all_quantities') }}" method="post">
+<form method = "POST" action="{{ url_for('carts.update_all_quantities') }}">
   <table class='table table-hover table-bordered container'>
     <thead class="thead-dark">
       <tr>
-        <th scope="col">Line Item ID</th>
         <th scope="col">Product Name</th>
         <th scope="col">Quantity</th>
         <th scope="col">Remove</th>
@@ -23,13 +22,12 @@
     <tbody>
       {% for item in cart_items %}
         <tr>
-          <th scope="row">{{ item.liid }}</th>
           <td>{{ item.product_name }}</td>
           <td>
-            <input type="number" name="quantity_{{ item.liid }}" value="{{ item.qty }}" min="1" class="form-control">
+            <input type="number" name="quantity_{{ item.id }}_{{ item.pid }}_{{ item.sid }}" value="{{ item.qty }}" min="1" class="form-control">
           </td>
           <td>
-            <form action="{{ url_for('carts.remove_item', liid=item.liid) }}" method="post">
+            <form method = "POST" action="{{ url_for('carts.remove_item', id=item.id, pid=item.pid, sid=item.sid) }} ">
               <input type="hidden" name="user_id" value="{{ uid }}">
               <button type="submit" class="btn remove-btn">
                 <span class="remove-icon">&times;</span>
