modified availability to be compatible with seller inventory, added availability to products page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,7 +35,7 @@
 <br><br>
 
 <form action="{{ url_for('products.get_products') }}" method="post">
-  <label for="user_id">Search for Products:</label>
+  <label for="keywords">Search for Products:</label>
   <input type="text" name="keywords" id="keywords" required>
   <button type="submit" class="btn btn-primary">Search</button>
 </form>
