--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -34,6 +34,7 @@
       <th scope="col">Description</th>
       <th scope="col">Category</th>
       <th scope="col">Image</th>
+      <th scope="col">Availability</th>
     </tr>
   </thead>
   <tbody>
@@ -46,6 +47,15 @@
         <td>{{product.category}}</td>
         <td>
           <img src="{{ product.image_url }}" alt="{{ product.name }} Image" width="100" height="100">
+        </td>
+        <td>
+          <span class="{% if product.available %}text-success{% else %}text-danger{% endif %}">
+            {% if product.available %}
+              In Stock
+            {% else %}
+              Out of Stock
+            {% endif %}
+          </span>
         </td>
       </tr>
     {% endfor %}
