--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -17,6 +17,13 @@
             <p class="card-text"><strong>Address:</strong> {{ user.address or "Not provided" }}</p>
             <p class="card-text"><strong>Account Balance:</strong> ${{ "%.2f"|format(user.balance) }}</p>
         </div>
+        <body>
+        <a href="{{ url_for('product_rating.product_rating', uid=uid, page=1) }}" type="button" class="btn btn-light">Product Reviews</a>
+    </body>
+      
+    <body>
+        <a href="{{ url_for('seller_rating.seller_rating', uid=uid, page=1) }}" type="button" class="btn btn-light">Seller Reviews</a>
+    </body>
     </div>
 </div>
 {% endblock %}
