--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -1,4 +1,4 @@
-/* profile.css */
+
 .container {
     max-width: 700px;
   }
@@ -6,7 +6,7 @@
   .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
+    border-radius: 5px; 
   }
   
   .card:hover {
