--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -77,31 +77,30 @@
   </thead>
   <tbody>
     {% for product in products%}
-      <a href="{{ url_for('products.product_details', pid=product.id) }}" style="text-decoration: none; color: inherit;">
-        <tr>
-          <th scope="row">{{product.id}}</th>
-          <td>{{product.name}}</td>
-          <td>{{product.price}}</td>
-          <td>{{product.description}}</td>
-          <td>{{product.category}}</td>
-          <td>
-            <img src="{{ product.image_url }}" alt="{{ product.name }} Image" width="100" height="100">
-          </td>
-          <td>{{ '{:.2f}/5'.format(product.avg_stars) if product.avg_stars is not none else 'Not rated' }}</td>
-          <td>
-            <span class="{% if product.available %}text-success{% else %}text-danger{% endif %}">
-              {% if product.available %}
-                In Stock
-              {% else %}
-                Out of Stock
-              {% endif %}
-            </span>
-          </td>
-        </tr>
-      </a>
+      <tr onclick="window.location='{{ url_for('products.product_details', pid=product.id) }}';" style="cursor:pointer;">
+        <th scope="row">{{product.id}}</th>
+        <td>{{product.name}}</td>
+        <td>{{product.price}}</td>
+        <td>{{product.description}}</td>
+        <td>{{product.category}}</td>
+        <td>
+          <img src="{{ product.image_url }}" alt="{{ product.name }} Image" width="100" height="100">
+        </td>
+        <td>{{ '{:.2f}/5'.format(product.avg_stars) if product.avg_stars is not none else 'Not rated' }}</td>
+        <td>
+          <span class="{% if product.available %}text-success{% else %}text-danger{% endif %}">
+            {% if product.available %}
+              In Stock
+            {% else %}
+              Out of Stock
+            {% endif %}
+          </span>
+        </td>
+      </tr>
     {% endfor %}
   </tbody>
 </table>
+
 <nav aria-label="Page navigation">
   <ul class="pagination">
     {% set total_pages = (total // per_page) + (1 if total % per_page > 0 else 0) %}
