readjust sorting dropdown menus

--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -28,6 +28,13 @@
 </div>
 
 <!-- Sorting Form -->
+<style>
+  /* Add this style to set the width of the dropdowns */
+  .form-control {
+    width: 40%; /* Set the width to 50% */
+    display: inline-block; /* Display the dropdowns side by side */
+  }
+</style>
 <div class="form-group">
   <form method="GET" id="sortForm">
     <label for="sortBy">Sort by:</label>
