fixed sort drop down menus

--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -8,7 +8,7 @@
 </body>
 <br><br>
 
-<h2>Available Products</h2>
+<h2>Product Search Results</h2>
 
 <!-- Category Selection Form -->
 <div class="form-group">
