--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
       <th scope="col">Product ID</th>
       <th scope="col">Product Name</th>
       <th scope="col">Price</th>
+      <th scope="col">Image</th>
     </tr>
   </thead>
   <tbody>
@@ -26,6 +27,9 @@
         <th scope="row">{{ product.id }}</th>
         <td>{{ product.name }}</td>
         <td>{{ product.price }}</td>
+        <td>
+          <img src="{{ product.image_url }}" alt="{{ product.name }} Image" width="100" height="100">
+        </td>
       </tr>
     {% endfor %}
   </tbody>
