--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -8,7 +8,7 @@
 </body>
 <br><br>
 
-<h2>Product Search Results</h2>
+<h1>Product Search Results</h1>
 <style>
   .parent {
     margin-bottom: 20px;
@@ -29,13 +29,13 @@
 
 <script>
   function submitFilterForm() {
-    document.getElementById("filter").action = "{{ url_for('products.get_products') }}";
-    document.getElementById("filter").submit();
+    document.getElementById("filterForm").action = "{{ url_for('products.get_products') }}";
+    document.getElementById("filterForm").submit();
   }
 </script>
 
 <div class="parent">
-  <form METHOD="GET" id="filter">
+  <form METHOD="GET" id="filterSortForm">
     {% for category, tags in tag_subtag_mapping.items() %}
       <details class="indent-1">
         <summary>
@@ -67,9 +67,22 @@
       </details>
     {% endfor %}
     <input type="hidden" name="keywords" value="{{ ' '.join(keywords) }}">
-    <input type="hidden" name="sort_by" value="{{ sort_by }}">
-    <input type="hidden" name="sort_order" value="{{ sort_order }}">
-    <button type="button" class="btn btn-primary" onclick="submitFilterForm()">Filter</button>
+    <div class="form-group d-flex">
+      <label for="sortBy" class="mr-2">Sort by:</label>
+      <select class="form-control mr-2" name="sort_by" id="sortBy" style="width: 300px;">
+        <option value="all">--</option>
+        <option value="name" {% if sort_by == 'name' %}selected{% endif %}>Name</option>
+        <option value="avg_stars" {% if sort_by == 'avg_stars' %}selected{% endif %}>Average Rating</option>
+        <option value="price" {% if sort_by == 'price' %}selected{% endif %}>Price</option>
+      </select>
+
+      <label for="sortOrder" class="mr-2">Sort order:</label>
+      <select class="form-control" name="sort_order" id="sortOrder" style="width: 300px;">
+        <option value="asc" {% if sort_order == 'asc' %}selected{% endif %}>Ascending</option>
+        <option value="desc" {% if sort_order == 'desc' %}selected{% endif %}>Descending</option>
+      </select>
+    </div>
+    <button type="button" class="btn btn-primary" onclick="submitFilterSortForm()">Filter & Sort</button>
   </form>
 </div>
 
@@ -110,40 +123,11 @@
   });
 </script>
 
-<!-- Sorting Form -->
-<style>
-  .form-control {
-    width: 40%; 
-    display: inline-block;
-  }
-</style>
-<div class="form-group">
-  <form method="GET" id="sortForm">
-    <label for="sortBy">Sort by:</label>
-    <select class="form-control" name="sort_by" id="sortBy">
-      <option value="all">--</option>
-      <option value="name" {% if sort_by == 'name' %}selected{% endif %}>Name</option>
-      <option value="avg_stars" {% if sort_by == 'avg_stars' %}selected{% endif %}>Average Rating</option>
-      <option value="price" {% if sort_by == 'price' %}selected{% endif %}>Price</option>
-    </select>
-
-    <label for="sortOrder">Sort order:</label>
-    <select class="form-control" name="sort_order" id="sortOrder">
-      <option value="asc" {% if sort_order == 'asc' %}selected{% endif %}>Ascending</option>
-      <option value="desc" {% if sort_order == 'desc' %}selected{% endif %}>Descending</option>
-    </select>
-    <input type="hidden" name="keywords" value="{{ ' '.join(keywords) }}">
-    <input type="hidden" name="selected_categories" value="{{ selected_categories }}">
-    <input type="hidden" name="selected_tags" value="{{ selected_tags }}">
-    <input type="hidden" name="selected_subtags" value="{{ selected_subtags }}">
-    <button type="button" class="btn btn-primary" onclick="submitSortForm()">Sort</button>
-  </form>
-</div>
-
 <script>
-  function submitSortForm() {
-    document.getElementById("sortForm").action = "{{ url_for('products.get_products') }}";
-    document.getElementById("sortForm").submit();
+  function submitFilterSortForm() {
+    // Submit the combined filter and sort form
+    document.getElementById("filterSortForm").action = "{{ url_for('products.get_products') }}";
+    document.getElementById("filterSortForm").submit();
   }
 </script>
 
@@ -191,10 +175,11 @@
     {% set total_pages = (total // per_page) + (1 if total % per_page > 0 else 0) %}
     {% for p in range(1, total_pages + 1) %}
     <li class="page-item {% if p == page %}active{% endif %}">
-      <a class="page-link" href="{{ url_for('products.get_products', page=p, keywords=keywords, category=category) }}">{{ p }}</a>
+      <a class="page-link" href="{{ url_for('products.get_products', page=p, keywords=keywords, categories=selected_categories, tags=selected_tags, subtags=selected_subtags, sort_order=sort_order, sort_by=sort_by) }}">{{ p }}</a>
     </li>
     {% endfor %}
   </ul>
 </nav>
+
 
 {% endblock %}
