--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -20,10 +20,10 @@
   <label for="category">Category:</label>
   <input type="text" name="category" required><br>
 
-  <label for="tag">Category:</label>
+  <label for="tag">Tag:</label>
   <input type="text" name="tag" required><br>
 
-  <label for="subtag">Category:</label>
+  <label for="subtag">Subtag:</label>
   <input type="text" name="subtag" required><br>
 
   <label for="picture">Picture link:</label>
