--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,17 +18,31 @@
       <th scope="col">Product ID</th>
       <th scope="col">Product Name</th>
       <th scope="col">Price</th>
+      <th scope="col">Description</th>
+      <th scope="col">Category</th>
       <th scope="col">Image</th>
+      <th scope="col">Availability</th>
     </tr>
   </thead>
   <tbody>
     {% for product in avail_products %}
-      <tr>
-        <th scope="row">{{ product.id }}</th>
-        <td>{{ product.name }}</td>
-        <td>{{ product.price }}</td>
+      <tr onclick="window.location='{{ url_for('products.product_details', pid=product.id) }}';" style="cursor:pointer;">
+        <th scope="row">{{product.id}}</th>
+        <td>{{product.name}}</td>
+        <td>{{product.price}}</td>
+        <td>{{product.description}}</td>
+        <td>{{product.category}}</td>
         <td>
           <img src="{{ product.image_url }}" alt="{{ product.name }} Image" width="100" height="100">
+        </td>
+        <td>
+          <span class="{% if product.available %}text-success{% else %}text-danger{% endif %}">
+            {% if product.available %}
+              In Stock
+            {% else %}
+              Out of Stock
+            {% endif %}
+          </span>
         </td>
       </tr>
     {% endfor %}
