Added a way for users to withdraw/deposit funds

--- a/app/templates/manage_profile.html
+++ b/app/templates/manage_profile.html
@@ -97,7 +97,7 @@
 
             <form action="{{ url_for('users.update_balance') }}" method="post" class="form-group">
                 <label>Account Balance:</label>
-                <input type="text" name="balance" value="{{ user.balance }}">
+                <input type="text" name="balance" value="{{ user.balance }}" readonly class="form-control">
                 <input type="submit" value="Update Balance" class="btn btn-primary">
             </form>
         </div>
