--- a/app/templates/user_purchases.html
+++ b/app/templates/user_purchases.html
@@ -14,6 +14,7 @@
       <th scope="col">Product Name</th>
       <th scope="col">Quantity</th>
       <th scope="col">Price</th>
+      <th scope="col">Seller</th>
       <th scope="col">Fulfilled</th>
     </tr>
   </thead>
@@ -24,6 +25,7 @@
         <td>{{ purchase.product_name }}</td>
         <td>{{ purchase.qty }}</td>
         <td>{{ purchase.price }}</td>
+        <td><a href="{{ url_for('users.public_user_profile', user_id=purchase.seller_id) }}">{{ purchase.seller_name }}</a></td>
         <td>{{ purchase.fulfilled }}</td>
       </tr>
     {% endfor %}
