--- a/app/templates/user_purchases.html
+++ b/app/templates/user_purchases.html
@@ -6,6 +6,22 @@
   <a href="{{ url_for('index.index') }}" type="button" class="btn btn-light">Home</a>
 </body>
 <br><br>
+<form action="{{ url_for('users.user_purchases', uid=current_user.get_id()) }}" method="get">
+  <div class="form-group">
+      <label for="item">Item:</label>
+      <input type="text" class="form-control" id="item" name="item" placeholder="Search by item">
+  </div>
+  <div class="form-group">
+      <label for="seller">Seller:</label>
+      <input type="text" class="form-control" id="seller" name="seller" placeholder="Search by seller">
+  </div>
+  <div class="form-group">
+      <label for="date">Date:</label>
+      <input type="date" class="form-control" id="date" name="date">
+  </div>
+  <button type="submit" class="btn btn-primary">Search</button>
+</form>
+<br><br>
 <h2>Purchase History:</h2>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
