Added Number of ratings in seller information

--- a/app/templates/public_user_profile.html
+++ b/app/templates/public_user_profile.html
@@ -68,6 +68,10 @@
                 <th scope="row">Average Rating</th>
                 <td>{{ seller_info.avg_rating }}</td>
             </tr>
+            <tr>
+                <th scope="row">Number of Ratings</th>
+                <td>{{ seller_info.rating_count }}</td>
+            </tr>
         </tbody>
     </table>
 
